# elmap-rl-controller

./: .gitignore  implementation_plan.md
deploy_cpp/: CMakeLists.txt  README.md  package.xml
deploy_cpp/config/: mybot.rviz
deploy_cpp/config/robots/: mybot_v2_1_cse.yaml  mybot_v2_1_cse_sim.yaml
deploy_cpp/include/: cse_policy_runner.h  height_subscriber.h  robot_config.h  robot_runtime_config.h
deploy_cpp/launch/: deploy.launch.py  motor_debug.launch.py  sim.launch.py  visualize.launch.py
deploy_cpp/scripts/: check_motor_direction_rviz.sh
deploy_cpp/sim/: mujoco_sim_node.py
deploy_cpp/src/: cse_policy_runner.cpp  deploy_node.cpp  height_subscriber.cpp  robot_runtime_config.cpp
deploy_cpp/tools/: probe_cse_policy.py
resources/robots/mybot_v2_1/urdf/: mybot_v2_1.urdf
resources/terrains/Obstacle_Course_Model/: height_limiting_bar.stl  high_wall.stl  sloped_wooden_bridge_single.stl  t_shaped_step.stl
robodog_gym/envs/base/: legged_robot.py  legged_robot_config.py
robodog_gym/envs/robodog/: mybot_v2_1_config.py  mybot_v3_config.py
robodog_gym/envs/robodog/velocity_tracking/: __init__.py
robodog_gym_learn/ppo_cse/: __init__.py
scripts/: play_teleop.py  test.py  train_exteroceptive_robust_icra_no_estimator.py  train_exteroceptive_robust_icra_no_height_sample_bias.py  train_exteroceptive_robust_icra_no_hist.py  train_exteroceptive_robust_icra_proposed.py  train_exteroceptive_robust_icra_reduced_dny_rand.py  train_exteroceptive_terrain_curriculum.py
